[package]
name = "quitabitui"
version = "0.1.0"
authors = ["AIT EL HAJ Abdelouadoud <abdelouadoud.aitelhaj.mailme@example.com>"]
license = "MIT"
edition = "2021"

[dependencies]
serde ={ version = "1.0", features = ["derive"] } 
serde_yml = "0.0.12"
rand = "0.8"
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"

